--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^14.0.1",
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
@@ -25,6 +26,7 @@
     "@dicebear/avatars": "^4.10.2",
     "@ionic/angular": "^6.0.0",
     "@ionic/cordova-builders": "^6.1.0",
+    "@iplab/ngx-color-picker": "^3.0.1",
     "@jaames/iro": "^5.5.2",
     "@resvg/resvg-js": "^2.0.1",
     "angular2-color-picker": "^1.3.1",
@@ -32,6 +34,7 @@
     "cordova-android": "10.1.2",
     "ionic-color-picker": "^1.0.3",
     "ngx-color-picker": "^4.5.3",
+    "ngx-colors": "^3.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
