--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
-    "@awesome-cordova-plugins/core": "^5.42.0",
+    "@awesome-cordova-plugins/core": "^5.43.0",
+    "@awesome-cordova-plugins/file-transfer": "^5.43.0",
     "@awesome-cordova-plugins/http": "^5.42.0",
+    "@capacitor/core": "3.5.1",
     "@dicebear/adventurer": "^4.10.2",
     "@dicebear/avatars": "^4.10.2",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/file": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/cordova-builders": "^6.1.0",
     "@iplab/ngx-color-picker": "^3.0.1",
@@ -49,6 +53,7 @@
     "@angular/compiler": "~13.2.2",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
+    "@capacitor/cli": "3.5.1",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/lab": "3.2.12",
     "@types/jasmine": "~3.6.0",
@@ -57,8 +62,10 @@
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "cordova-plugin-advanced-http": "^3.3.1",
+    "cordova-plugin-canvas2image": "git+https://github.com/devgeeks/Canvas2ImagePlugin.git",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^7.0.0",
+    "cordova-plugin-file-transfer": "git+https://github.com/apache/cordova-plugin-file-transfer.git",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^5.0.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -87,7 +94,9 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android"
