--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@jaames/iro": "^5.5.2",
     "@resvg/resvg-js": "^2.0.1",
     "angular2-color-picker": "^1.3.1",
+    "canvg": "^4.0.0",
     "convert-svg-to-png": "^0.6.2",
     "cordova-android": "10.1.2",
     "ionic-color-picker": "^1.0.3",
     "ngx-color-picker": "^4.5.3",
     "ngx-colors": "^3.1.2",
     "rxjs": "~6.6.0",
+    "save-svg-as-png": "^1.4.17",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
